fixes for the online status and alignment for profile and text

--- a/static/css/user.css
+++ b/static/css/user.css
@@ -221,4 +221,5 @@ h1 {
 .profile-picture {
 	max-width: 250px;
 	max-height: 250px;
+	margin-bottom: 25px;
 }
